calmat_ng/static/css/style.css
/* ... */
/*------------------------------------------------------------------------------
    :: New Bio
------------------------------------------------------------------------------*/

.bio_style2_image {
    max-width:60%;
    margin:0px 0px 14px 15px;
}

.bio_page .recent-stories .image {
    width: 158px;
}
.bio_page .recent-stories .image img {
    width: 100%;
    height: auto;
    display: block;
}

@media screen and (max-width: 990px){
    .bio_page .content {
        width: 100%;
    }
}
@media screen and (max-width: 767px){
    .bio_page .recent-stories .image {
        width: 62px;
    }
}

@media (max-width: 585px){
    .bio_style2_image {
        max-width:100%;
        margin:0px 0px 14px 0px;
    }
}








/*------------------------------------------------------------------------------
    :: Thomas 
------------------------------------------------------------------------------*/


@media (max-width: 640px) {

#news_partners,
#recent_projects,
.mid_section_links,
.featured-intr2,
.headlines {
display:none;
}

.politics {
float:left;
padding-right:30px;
}

}

.politics {
float:left;
width:100%;
}

.politics .quote_cred {
text-transform:uppercase;
font-size:15px;
letter-spacing:1px;
}

.partner_logos a {
width:90px;
}

.partner_img {
width:100%;
height:auto;
padding:15px 5px;
float:left;
}

#partners_text {
text-align:left;
}


#more_partners_link {
height: 58px;
width: 70px;
font-size: .8em;
background-color: #01b4c6;
color: #ffffff;
float: right;
padding: 15px 10px;
line-height:15px;
-webkit-box-shadow: 4px 4px 5px -2px rgba(0,0,0,0.35);
-moz-box-shadow: 4px 4px 5px -2px rgba(0,0,0,0.35);
box-shadow: 4px 4px 5px -2px rgba(0,0,0,0.35);
position:relative;
left:-6px;
background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAcAAAAHCAYAAADEUlfTAAAAAXNSR0IArs4c6QAAADxJREFUCB1jZJj/4j8DOmAECnx7zcCELs4AlWDgFEWTRJIAaULoRJNASGKRQEgCLQfZgQ6YGL5jlwApBAB0eBB17iPJWQAAAABJRU5ErkJggg==) repeat;
}

#more_partners_link:hover {
background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAcAAAAHCAYAAADEUlfTAAAAAXNSR0IArs4c6QAAADVJREFUCB1jNNj09j8DFvDw00cGJiziDCAJeT5+TEmYBEgTik5kCRRJdAm4JDYJsCQuCZAkAGbFF6A7mthDAAAAAElFTkSuQmCC) repeat;
}

#basic1:before,
#basic2:before,
#basic3:before,
#basic4:before {
content: "";
display: block;
position: absolute;
top: 0;
bottom: -10px;
left: 0;
right: 0;
background: rgba(0, 0, 0, .4);
transition: background .3s linear;
}

#basic1,
#basic2,
#basic3,
#basic4 {
border-top:solid 1px white;
margin-bottom:10px;
}

#basics_text1,
#basics_text2,
#basics_text3,
#basics_text4 {
font-size:24px !important;
margin:0 5%;
}


@media (max-width: 960px) and (min-width: 320px) {
#basics_text2 {
font-size:26px !important;
margin:0 11%;
}

@media (max-width:780px) {
.recent-stories article .wrap {
padding-left:30px;
}
.recent-stories article .image img {
min-width:70px !important;
min-height:50px !important;
}
}


@media (max-width:380px) {

.featured-intr {
margin-top:0 !important;
}

.featured-intr img {
height:auto !important;
}

#second_article_text {
top:-45px;
}

#main_article {
height:245px;
}
}



/*-- add logo on mobile nav --*/
@media (max-width:767px) {
nav.navbar:after {
background:url("/static/theme/frontend/img/logo.png");
height:65px;
width:100%;
background-size:174px 42px !important;
background-position:center;
background-repeat:no-repeat;
}

}

















.featured-intr p {
  font-family: "Neusa", sans-serif;
  font-size: 14px;
  color: #979797;
}
.columnist li,
.columnist ul {
  line-height: 30px;
  letter-spacing: 1px;
}
@media screen and (max-width: 1200px) {
  font-size: 18px;
  letter-spacing: 1px;
}
@media screen and (max-width: 767px) {
  .politics_img {
    float: none;
  }
  .recent-stories.articles .image img {
    min-height: inherit;
  }
}

